Added alt to images and focus styles
added the focus styles and alt tags on css

--- a/favourites.html
+++ b/favourites.html
@@ -16,7 +16,7 @@ og-url: recent
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
       <div class="relative">
-        <img itemprop="image" src="{{site.baseurl}}/images/punk-ipa.jpg">
+        <img itemprop="image" src="{{site.baseurl}}/images/punk-ipa.jpg" alt="Punk IPA Beer Bottle">
         <div class="fav-beer-overlay absolute pin-center"></div>
       </div>
       <div class="bold absolute pin-bottom-left gutter">
@@ -31,7 +31,7 @@ og-url: recent
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
       <div class="relative">
-        <img itemprop="image" src="{{site.baseurl}}/images/cause-and-effect.jpg">
+        <img itemprop="image" src="{{site.baseurl}}/images/cause-and-effect.jpg" alt="Cause and Effect Beer Can">
         <div class="fav-beer-overlay absolute pin-center"></div>
       </div>
       <div class="bold absolute pin-bottom-left gutter">
@@ -46,7 +46,7 @@ og-url: recent
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
       <div class="relative">
-        <img itemprop="image" src="{{site.baseurl}}/images/detour.jpg">
+        <img itemprop="image" src="{{site.baseurl}}/images/detour.jpg" alt="Detour Beer Bottles">
         <div class="fav-beer-overlay absolute pin-center"></div>
       </div>
       <div class="bold absolute pin-bottom-left gutter">
@@ -61,7 +61,7 @@ og-url: recent
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 img-flex relative island-1-8 gutter-1-4">
     <a itemprop="url" href="{{site.baseurl}}/punk-ipa">
       <div class="relative">
-        <img itemprop="image" src="{{site.baseurl}}/images/lonepine.jpg">
+        <img itemprop="image" src="{{site.baseurl}}/images/lonepine.jpg" alt="Lone Pine Beer Can">
         <div class="fav-beer-overlay absolute pin-center"></div>
       </div>
       <div class="bold absolute pin-bottom-left gutter">
@@ -80,7 +80,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/punk-ipa.jpg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/punk-ipa.jpg" alt="Punk IPA Beer Bottle">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Punk IPA</h3>
@@ -96,7 +96,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/cause-and-effect.jpg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/cause-and-effect.jpg" alt="Cause and Effect Beer Can">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Cause & Effect</h3>
@@ -112,7 +112,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/detour.jpg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/detour.jpg" alt="Detour Beer Bottles">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Detour</h3>
@@ -128,7 +128,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/inukshuk.jpg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/inukshuk.jpg" alt="Inukshuk Beer">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Inukshuk</h3>
@@ -144,7 +144,7 @@ og-url: recent
     <li class="grid grid-middle">
       <a itemprop="url" class="island-1-2 w-1" href="{{site.baseurl}}/punk-ipa">
         <div class="unit xs-1-3">
-          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/lonepine.jpg" alt="">
+          <img itemprop="image" class="img-flex beer-img" src="{{site.baseurl}}/images/lonepine.jpg" alt="Lone Pine Beer Can">
         </div>
         <div class="unit xs-1-3">
           <h3 class="not-bold push-0 mega">Lone Pine</h3>
