--- a/profile.html
+++ b/profile.html
@@ -12,12 +12,12 @@ skip-link-title-2:
 
 <section class="banner relative wrapper">
   <div class="embed embed-16by9">
-    <img class="img-flex embed-item" src="{{site.baseurl}}/images/profile-beer-bg.jpg">
+    <img class="img-flex embed-item" src="{{site.baseurl}}/images/profile-beer-bg.jpg" alt="Beer Glasses">
     <div class="banner-profile embed-item absolute pin-bottom-center"></div>
   </div>
   <div class="banner-info">
     <div class="absolute pin-bottom-left island-1-2">
-      <img itemprop="image" class="img-flex profile-pic" src="{{site.baseurl}}/images/profile-picture.jpg">
+      <img itemprop="image" class="img-flex profile-pic" src="{{site.baseurl}}/images/profile-picture.jpg" alt="Profile Picture">
     </div>
     <div class="banner-text absolute pin-bottom-right gutter-1-2">
       <h1 class="profile-heading nina push-0">James<br>Black</h1>
